--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<title>Unique Card Flip</title>
+<title>Flip Card</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
